<resources>
    <string name="app_name">QRCodeMarket</string>
    <string name="qr_code_market">QR Code Market</string>
    <string name="enter_your_login_name">Enter your login name</string>
    <string name="let_s_join_hands_to_prevent_covid">Let\'s join hands to prevent Covid</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="quick_login">Quick login with social account</string>
    <string name="you_dont_have_account">"You don't have account?"</string>
    <string name="sign_up">
        <u>Sign Up</u>
    </string>
    <string name="google_account">Google Account</string>
    <string name="facebook_account">Facebook Account</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="enter_your_number_phone">Enter your number phone</string>
    <string name="you_have_account">You have account?</string>
    <string name="sign_in">
        <u>Sign In</u>
    </string>
    <string name="register">Register</string>
    <string name="continue_button">Continue</string>
    <string name="facebook_app_id">444724829996754</string>
    <string name="fb_login_protocol_scheme">fb444724829996754</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_address2">
        <font size="16">Enter your address</font>
    </string>
    <string name="complete">Complete</string>

    <string-array name="Province">
        <item>Province</item>
    </string-array>
    <string-array name="District">
        <item>District</item>
    </string-array>
    <string-array name="Ward">
        <item>Ward</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shield5k">shield5k</string>
    <string name="checkgif">checkgif</string>
    <string name="account_setting">Account Setting</string>
    <string name="display">Display</string>
    <string name="make_sound">Make sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="setting">Setting</string>
    <string name="privacy">Privacy</string>
    <string name="help_and_feedback">Help And Feedback</string>
    <string name="introduction">Introduction</string>
    <string name="logout">Logout</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="qr_market_dashboard">QR Market Dashboard</string>
    <string name="name">A</string>
    <string name="market_manager">Market Manager</string>
    <string name="image_dashboard">image_dashboard</string>
    <string name="statistical">Statistical</string>
    <string name="notification">Notification</string>
    <string name="enter_name_market">Enter name market</string>
    <string name="enter_market_location">Enter market location</string>
    <string name="enter_url_image_qrcode_out">Enter url image qrcode(out)</string>
    <string name="enter_url_image_qrcode_in">Enter url image qrcode(in)</string>
    <string name="update_market">Update Market</string>
    <string name="image_qr_code_in">Image QR Code (In)</string>
    <string name="image_qr_code_out">Image QR Code (Out)</string>
    <string name="market_name">Market Name</string>
    <string name="market_location">Market Location</string>


</resources>